--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">jv-fragments</string>
+    <string name="home">home</string>
+    <string name="add">Add</string>
+    <string name="Home">Home</string>
+    <string name="favourites">Favourites</string>
 </resources>
